# clamav-windows-x64-gui

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
.github/workflows/: build-gui.yml  ci-gui.yml
gui/: Cargo.toml  app.manifest  build.rs
gui/embed/clamav/: README.md
gui/embed/yamagoya/: README.md
gui/embed/yamagoya/rules/: detect_invoke-sharploader.yml  detect_lsass_dump.yml  detect_malware_sample.yml  detect_ransomeware_using_decoy.yml  detect_wmi_activity.yml
gui/src/: app.rs  config.rs  embedded.rs  main.rs  realtime.rs  scanner.rs  theme.rs  tray.rs  updater.rs
