[package]
name = "clamav-gui"
version = "1.0.8-build35"
edition = "2021"
description = "Modern GUI for ClamAV antivirus scanner"

[dependencies]
eframe = { version = "0.31", features = ["persistence"] }
egui = "0.31"
egui_extras = { version = "0.31", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
open = "5"
dirs = "6"
zstd = "0.13"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_Foundation"] }

[build-dependencies]
winresource = "0.1"
zstd = "0.13"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "clamav-gui"
path = "src/main.rs"























